// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Swiper AllowMenuTags + AllowBodyTags example 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-menu
    id="uuID4"
    key="uuID4"
  >
    <UU5.Example.MyCompButton
      content="allow tags component"
      id="allowID"
    />
  </swiper-menu>
  <swiper-body
    id="uuID6"
    key="uuID6"
  >
    <UU5.Example.MyCompButton
      content="allow tags component2"
      id="allowID2"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper allowBodyTags=undefined 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper allowMenuTags=undefined 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper checkGrammar=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper checkGrammar=true 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper checkHighlight=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper checkHighlight=true 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper checkSpaces=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper checkSpaces=true 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper className="my-classname" 1`] = `
<div
  className="uu5-bricks-swiper my-classname"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper content=12345 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper controlled=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper controlled=true 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper default props 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper disabled=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper disabled=true 1`] = `
<div
  className="uu5-bricks-swiper uu5-common-disabled"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Swiper docKit examples UU5.Bricks.Swiper example01 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
      "minHeight": "200px",
      "width": "100%",
    }
  }
  title={null}
>
  <swiper-menu
    id="uuID2"
    key="uuID2"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <Button
      content="Close"
      id="uuID3"
    />
  </swiper-menu>
  <swiper-menu
    id="uuID4"
    key="uuID4"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <Button
      content="Close"
      id="uuID5"
    />
  </swiper-menu>
  <swiper-body
    id="uuID6"
    key="uuID6"
  >
    <P
      className="center"
      id="uuID7"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper dynamic=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper dynamic=true 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper hidden=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper hidden=true 1`] = `
<div
  className="uu5-bricks-swiper uu5-common-hidden"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper id="myId" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="myId"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper leftMenuOpen=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper leftMenuOpen=true 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper name="myName" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  name="myName"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Swiper nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Swiper nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.Swiper nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper noIndex=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper noIndex=true 1`] = `
<div
  className="uu5-bricks-swiper uu5-noindex"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper props.Function UU5.Bricks.Swiper -  onSwipeCloseLeftMenu() should be called 1`] = `
<Swiper
  id="uuID"
  onSwipeCloseLeftMenu={[Function]}
  onSwipeCloseRightMenu={[Function]}
  onSwipeOpenLeftMenu={[Function]}
  onSwipeOpenRightMenu={[Function]}
  onWip={true}
  style={
    Object {
      "backgroundColor": "lightblue",
      "minHeight": "200px",
      "width": "100%",
    }
  }
/>
`;

exports[`UU5.Bricks.Swiper props.Function UU5.Bricks.Swiper -  onSwipeCloseRightMenu() should be called 1`] = `
<Swiper
  id="uuID"
  onSwipeCloseLeftMenu={[Function]}
  onSwipeCloseRightMenu={[Function]}
  onSwipeOpenLeftMenu={[Function]}
  onSwipeOpenRightMenu={[Function]}
  onWip={true}
  style={
    Object {
      "backgroundColor": "lightblue",
      "minHeight": "200px",
      "width": "100%",
    }
  }
/>
`;

exports[`UU5.Bricks.Swiper props.Function UU5.Bricks.Swiper -  onSwipeOpenLeftMenu() should be called 1`] = `
<Swiper
  id="uuID"
  onSwipeCloseLeftMenu={[Function]}
  onSwipeCloseRightMenu={[Function]}
  onSwipeOpenLeftMenu={[Function]}
  onSwipeOpenRightMenu={[Function]}
  onWip={true}
  style={
    Object {
      "backgroundColor": "lightblue",
      "minHeight": "200px",
      "width": "100%",
    }
  }
/>
`;

exports[`UU5.Bricks.Swiper props.Function UU5.Bricks.Swiper -  onSwipeOpenRightMenu() should be called 1`] = `
<Swiper
  id="uuID"
  onSwipeCloseLeftMenu={[Function]}
  onSwipeCloseRightMenu={[Function]}
  onSwipeOpenLeftMenu={[Function]}
  onSwipeOpenRightMenu={[Function]}
  onWip={true}
  style={
    Object {
      "backgroundColor": "lightblue",
      "minHeight": "200px",
      "width": "100%",
    }
  }
/>
`;

exports[`UU5.Bricks.Swiper pureRender=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper pureRender=true 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper rightMenuOpen=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper rightMenuOpen=true 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper selected=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper selected=true 1`] = `
<div
  className="uu5-bricks-swiper uu5-common-selected"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swiped="down" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swiped="downLeft" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swiped="downRight" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swiped="left" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swiped="right" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swiped="up" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swiped="upLeft" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swiped="upRight" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swipedFast=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swipedFast=null 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swipedFast=true 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swipedLong=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swipedLong=null 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper swipedLong=true 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper textCorrector=false 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper textCorrector=true 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title="My Tooltip"
>
  <swiper-body
    id="childBody"
    key="childBody"
  >
    <P
      className="center"
      id="idP"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;
